# astock_lifespan-alpha

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.codex/: config.toml
docs/: README.md
docs/01-design/: 00-foundation-bootstrap-design-notes-20260419.md  01-doc-governance-charter-20260419.md
docs/02-spec/: 00-astock-lifespan-alpha-reconstruction-master-plan-v1-20260419.md  01-doc-governance-and-execution-spec-20260419.md  01-malf-wave-scale-semantic-spec-v1-placeholder-20260419.md  02-malf-wave-scale-diagram-edition-placeholder-20260419.md  03-alpha-pas-trigger-semantic-spec-v1-20260419.md  04-alpha-signal-aggregation-spec-v1-20260419.md  05-alpha-signal-to-position-bridge-spec-v1-20260419.md  06-position-minimal-ledger-and-runner-spec-v1-20260419.md  07-portfolio-plan-minimal-bridge-spec-v1-20260419.md  08-trade-minimal-execution-ledger-and-runner-spec-v1-20260419.md  09-portfolio-plan-to-trade-bridge-spec-v1-20260419.md  10-astock-lifespan-alpha-reconstruction-plan-part2-stage-five-trade-v1-20260419.md  11-system-minimal-readout-and-runner-spec-v1-20260419.md  12-data-source-fact-contract-alignment-spec-v1-20260419.md  13-data-to-system-minimal-pipeline-orchestration-spec-v1-20260419.md  14-real-data-build-rehearsal-spec-v1-20260419.md  15-malf-day-real-data-diagnosis-spec-v1-20260419.md  16-stage-eleven-malf-day-repair-spec-v1-20260419.md  17-stage-twelve-malf-day-write-path-replay-unblock-spec-v1-20260419.md  18-stage-thirteen-malf-day-segmented-build-completion-spec-v1-20260419.md  26-malf-foundation-canon-v1-20260424.md  (+13 more)
scripts/: _bootstrap.py
(+390 files in other folders)
